--- a/styleC.css
+++ b/styleC.css
@@ -2,7 +2,7 @@ body{
     
     background-color:powderblue;
     size: 7in 9.25in;
-    border: 20px  solid rgb(122, 55, 55);
+    /*border: 20px  solid rgb(122, 55, 55);*/
     margin: 27mm 16mm 27mm 16mm;
     padding: 20px 120px;
 }
